--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,15 @@ body {
   color: black;
 }
 
+.fetch-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .filter-btn {
   width: 7rem;
   height: 3.5rem;
@@ -39,13 +48,6 @@ body {
 .active-btn {
   background-color: var(--fourth-color);
   color: var(--first-color);
-}
-
-main {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: row;
 }
 
 .navbar1 {
