--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,65 @@ body {
   color: black;
 }
 
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: var(--fourth-color);
+  border-radius: 5%;
+  width: 24rem;
+  height: 32.5rem;
+  box-shadow: 0px 4px 8px black;
+  cursor: pointer;
+}
+
+.card-container:active {
+  background-color: var(--second-color);
+}
+
+.cards-container {
+  margin-top: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex: row;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.card-img-container {
+  width: 85%;
+  height: 22rem;
+  background-color: var(--first-color);
+  border-radius: 5%;
+}
+
+.card-img {
+  width: 100%;
+  height: 100%;
+}
+
+.card-title {
+  width: 85%;
+  color: var(--fifth-color);
+  display: inline-block;
+  word-wrap: break-word;
+  font-size: 2rem;
+  text-align: center;
+  line-height: 0.9;
+}
+
+.card-date {
+  width: 85%;
+  color: var(--fifth-color);
+  display: inline-block;
+  word-wrap: break-word;
+  font-size: 2rem;
+  text-align: center;
+}
+
 .fetch-container {
   width: 100%;
   height: 100%;
@@ -103,6 +162,14 @@ body {
   background-color: var(--third-color);
 }
 
+.text-overflow {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .title {
   font-size: var(--title-size);
 }
@@ -114,6 +181,10 @@ body {
 @media (max-width: 420px) {
   .search-input {
     width: 16rem;
+  }
+
+  .card-container {
+    width: 20rem;
   }
 }
 
