--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,18 @@ body {
   color: black;
 }
 
+.cancel-modal {
+  top: 1rem;
+  right: 1rem;
+  position: absolute;
+  background: transparent;
+  border: none;
+  font-size: 1.5rem;
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+}
+
 .card-container {
   display: flex;
   justify-content: center;
@@ -137,6 +149,29 @@ footer {
   box-sizing: border-box;
 }
 
+.modal {
+  background-color: var(--fifth-color);
+  width: 24rem;
+  height: 32.5rem;
+  border-radius: 5%;
+  position: fixed; /* Cambia de relative a fixed */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+}
+
 .navbar1 {
   display: flex;
   justify-content: center;
@@ -221,6 +256,10 @@ footer {
   }
 
   .card-container {
+    width: 20rem;
+  }
+
+  .modal {
     width: 20rem;
   }
 }
