--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,10 @@ body {
   color: black;
 }
 
+.brown-icon {
+  fill: var(--fourth-color);
+}
+
 .cancel-modal {
   top: 1rem;
   right: 1rem;
@@ -154,10 +158,61 @@ footer {
   width: 24rem;
   height: 32.5rem;
   border-radius: 5%;
-  position: fixed; /* Cambia de relative a fixed */
+  position: fixed; 
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: start;
+}
+
+.modal-book-author {
+  width: 100%;
+  display: block;
+  font-size: 1.3rem;
+  white-space: normal;
+  word-wrap: break-word;
+  line-height: 0.3;
+  margin-top: 0.8rem;
+}
+
+.modal-book-title {
+  width: 100%;
+  display: block;
+  font-size: 1.7rem;
+  white-space: normal;
+  word-wrap: break-word;
+  line-height: 0.9;
+}
+
+.modal-content {
+  margin-top: 3.5rem;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.modal-icon {
+  width: 1.2rem;
+  height: 1.2rem;
+}
+
+.modal-icon-text-container {
+  display: flex;
+  justify-content:start;
+  align-items: center;
+  width: 100%;
+  gap: 0.2rem;
+  margin-bottom: 0.6rem;
+}
+
+.modal-line {
+  border: 0.1rem solid black;
+  width: 100%;
+  margin-top: 1rem;
 }
 
 .modal-overlay {
@@ -170,6 +225,10 @@ footer {
   display: flex; 
   justify-content: center;
   align-items: center;
+}
+
+.modal-text {
+  font-size: 1.2rem;
 }
 
 .navbar1 {
@@ -194,6 +253,32 @@ footer {
 
 .not-active-btn {
   background-color: var(--fifth-color);
+}
+
+.option {
+  height: 2rem;
+  background-color: var(--third-color);
+  border-radius: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  box-sizing: border-box;
+  color: var(--fifth-color);
+}
+
+.options-container {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-bottom: 0.6rem;
+  gap: 0.3rem;
+  flex-wrap: wrap;
+}
+
+.orange-icon {
+  fill: orange;
 }
 
 .page-container {
