--- a/src/App.css
+++ b/src/App.css
@@ -391,6 +391,11 @@ footer {
   min-height: 100vh;
 }
 
+.results {
+  margin-top: 1.5rem;
+  font-size: 1.5rem;
+}
+
 .search-bar {
   margin-top: 1.5rem;
   display: flex;
