--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,6 @@ body {
 
 .cards-container {
   margin-top: 2.5rem;
-  margin-bottom: 6rem;
   display: flex;
   justify-content: center;
   align-items: start;
@@ -256,9 +255,15 @@ footer {
 .loader-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   width: 100%;
-  height: 100%;
+  height: 5rem;
+  margin-top: 3rem;
+}
+
+.margin-div {
+  width: 100%;
+  height: 6.5rem;
 }
 
 .modal {
