--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ body {
   flex-direction: column;
   gap: 1rem;
   background-color: var(--fourth-color);
-  border-radius: 5%;
+  border-radius: 40px;
   width: 24rem;
   height: 32.5rem;
   cursor: pointer;
@@ -82,13 +82,13 @@ body {
   width: 85%;
   height: 22rem;
   background-color: var(--first-color);
-  border-radius: 5%;
+  border-radius: 50px;
 }
 
 .card-img {
   width: 100%;
   height: 100%;
-  border-radius: 5%;
+  border-radius: 40px;
 }
 
 .card-title {
@@ -269,7 +269,7 @@ footer {
   background-color: var(--fifth-color);
   width: 24rem;
   height: 32.5rem;
-  border-radius: 5%;
+  border-radius: 40px;
   position: fixed; 
   top: 50%;
   left: 50%;
