--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,9 @@ body {
   position: relative;
   margin: 0;
   background-color: var(--fifth-color);
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 .black-text {
