--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,9 @@
   --first-color: #F8EDFF;
   --second-color: #BFCFE7;
   --third-color: #525CEB;
-  --fourth-color: #3D3B40;
+  --fourth-color: #323232;
   --fifth-color: whitesmoke;
+  --sixth-color: #212121;
   --title-size: 2.5rem;
 }
 
@@ -26,7 +27,7 @@ a:checked {
 body {
   position: relative;
   margin: 0;
-  background-color: var(--fifth-color);
+  background-color: var(--sixth-color);
   font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
@@ -72,7 +73,7 @@ body {
 }
 
 .cards-container {
-  margin-top: 2.5rem;
+  margin-top: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: start;
@@ -93,8 +94,7 @@ body {
 .card-img-container {
   width: 85%;
   height: 22rem;
-  background-color: var(--first-color);
-  border-radius: 50px;
+  background-color: var(--fourth-color);
 }
 
 .card-img {
@@ -123,6 +123,10 @@ body {
   flex-direction: column;
 }
 
+.films-btn {
+  border-radius: 50px 0px 0px 50px;
+}
+
 .film-icon {
   width: var(--title-size);
   height: var(--title-size);
@@ -138,8 +142,14 @@ body {
   height: 3rem;
   font-size: 1.2rem;
   border: none;
-  border-radius: 50px;
   cursor: pointer;
+}
+
+.filter-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
 
 footer {
@@ -349,7 +359,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  background-color: var(--fourth-color);
+  background-color: var(--sixth-color);
   padding: 1rem;
   gap: 0.8rem;
 }
@@ -358,10 +368,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   gap: 0.5rem;
   padding: 1rem;
-  background-color: var(--second-color);
 }
 
 .not-active-btn {
@@ -400,18 +409,19 @@ footer {
 }
 
 .results {
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   font-size: 1.5rem;
+  color: var(--fifth-color);
 }
 
 .search-bar {
-  margin-top: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   display: inline-flex;
   background-color: var(--fourth-color);
   border-radius: 25px;
+  margin-top: 1rem;
 }
 
 .search-icon {
@@ -455,6 +465,10 @@ footer {
   font-size: var(--title-size);
 }
 
+.tv-btn {
+  border-radius: 0px 50px 50px 0px;
+}
+
 .white-text {
   color: var(--fifth-color);
 }
@@ -474,8 +488,12 @@ footer {
 }
 
 @media (min-width: 750px) {
-  .search-input {
-    width: 35rem;
+  .navbar2 {
+    flex-direction: row;
+  }
+  .search-bar {
+    margin-top: 0;
+    margin-left: 0.5rem;
   }
 }
 
