feat: change scroll loader color

--- a/src/App.css
+++ b/src/App.css
@@ -189,7 +189,7 @@ footer {
   width: 7px;
   height: 7px;
   border-radius: 50%;
-  background: var(--fourth-color);
+  background: var(--fifth-color);
   margin: -4px 0 0 -4px;
 }
 
